Bug Fix
Header was overlapping footer.
Improved Mobile sticky header visibility

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Nunito Sans';
 }
 
 html {
@@ -91,7 +91,7 @@ main {
     content: '';
     position: absolute;
     inset: 0;
-    opacity: 0.2;
+    opacity: 0.6;
 }
 .externalLink i{
     font-size: 0.8rem;
@@ -226,8 +226,7 @@ footer {
         position: sticky;
         top: 0;
         margin-left: auto;
-        height: 100vh;
-        padding-bottom: 6rem;
+        height: 80vh;
         max-width: 500px;
 
     }
